--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,8 +1,8 @@
 {% set xorg_name = "xorgproto" %}
 {% set xorg_category = "proto" %}
 {% set name = "xorg-" ~ xorg_name %}
-{% set version = "2022.1" %}
-{% set sha256 = "1d2dcc66963f234d2c1e1f8d98a0d3e8725149cdac0a263df4097593c48bc2a6" %}
+{% set version = "2022.2" %}
+{% set sha256 = "5d13dbf2be08f95323985de53352c4f352713860457b95ccaf894a647ac06b9e" %}
 {% set am_version = "1.15" %} # keep synchronized with build.sh
 
 package:
@@ -10,7 +10,7 @@ package:
   version: {{ version }}
 
 source:
-  url: https://www.x.org/releases/individual/{{ xorg_category }}/{{ xorg_name }}-{{ version }}.tar.bz2
+  url: https://www.x.org/releases/individual/{{ xorg_category }}/{{ xorg_name }}-{{ version }}.tar.xz
   sha256: {{ sha256 }}
   patches:
     - 0001-windows-fds-bits.patch  # [win]
