--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,15 +23,15 @@ requirements:
     - m2-autoconf  # [win]
     - m2-automake{{ am_version }}  # [win]
     - m2-libtool  # [win]
-    - pkg-config  # [win]
-    - pkg-config  # [not win]
-    - m2-base  # [win]
+    - pkg-config
     - gnuconfig  # [unix]
+    - m2-base  # [win]
+    - make  # [unix]
+    - m2-make  # [win]
     - {{ compiler('c') }}        # [unix]
     - {{ stdlib("c") }}          # [unix]
     - {{ compiler('m2w64_c') }}  # [win]
     - {{ stdlib("m2w64_c") }}    # [win]
-    - make  # [unix]
   host:
     - xorg-util-macros
 
