--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,7 +23,8 @@ requirements:
     - m2-autoconf  # [win]
     - m2-automake{{ am_version }}  # [win]
     - m2-libtool  # [win]
-    - pkg-config
+    - pkg-config  # [unix]
+    - m2-pkg-config  # [win]
     - gnuconfig  # [unix]
     - m2-base  # [win]
     - make  # [unix]
